--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -40,7 +40,12 @@
 
   <aside id="sidebar">
     <h2>Chat</h2>
+    <span id="username">Your display name is: </span>
     <ul id="chat-log"></ul>
+    <div id="chat-input-container">
+      <input id="chat-input" type="text" placeholder="Type here to chat..." />
+      <button id="chat-input-button">Send</button>
+    </div>
   </aside>
 </div>
 
